[package]
name = "lp-rs"
version = "0.1.0"
authors = ["Richard South"]
edition = "2018"
description = "access to Lorem Picsum imagery"
readme = "README.md"
repository = "https://github.com/rsouth/lp-rs"
license-file = "LICENSE"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = "0.4"
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
serde = { version = "1.0.125", features = ["derive"] }
image = "0.23.14"
