[package]
name = "lp-rs"
version = "0.1.0"
authors = ["Richard South"]
edition = "2018"
description = "access to Lorem Picsum imagery"
readme = "README.md"
repository = "https://github.com/rsouth/lp-rs"
license-file = "LICENSE"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"reqwest" = { "version" = "0.10.8", "features" = ["blocking"] }

[dev-dependencies]
mockall = "0.8.0"